# ORACLE

./: .gitignore  CITATION.cff  Epistasis_20250811.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.txt
src/oracle_epistasis/: __init__.py  cli.py  io.py  model.py  pipeline.py
src/oracle_epistasis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
